# desafio-etl-python

./: .gitignore  .gitpod.Dockerfile  .pylintrc  Makefile  README.md  pyproject.toml  taxti-riders
app/: main.py
app/jobs/: spark_job.py
app/readers/: reader.py
app/tests/integration/: test_taxi_ride_integration.py
app/tests/unit/: test_taxi_ride.py  test_transformations.py
app/transformations/: taxi_ride.py
app/writers/: writer.py
setup/: setup.sh
tests/unit/: test_transformations.py
