[tool.poetry]
name = "etl-spark"
version = "0.1.0"
description = ""
authors = ["breno jacubovski"]
readme = "README.md"
packages = [
    { include = "app" }
]
[tool.poetry.dependencies]
numpy = "^1.20.2"
pandas = "^2.0.0"
pyarrow = "^12.0.0"
# This is pinned to stay in sync with the version
# That gets downloaded in `.gitpod.Dockerfile`
pyspark = "3.5.1"
python = "~3.11"
setuptools = "^75.1.0"
grpcio = "^1.66.2"
google = "^3.0.0"
protobuf = "^5.28.2"
spark = "^0.2.1"
grpcio-status = "^1.66.2"

[tool.poetry.dev-dependencies]
pylint = "^2.8.2"
pytest = "^6.2.4"
mypy = "^0.910"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
